Fix pixel shift in Objects dialog on hover
The treeview's view attribute affects the entire treeview instead of
just the rows in GTK4. This attempts to 'fix' it by manually updating
row backgrounds.

--- a/share/ui/style.css
+++ b/share/ui/style.css
@@ -470,11 +470,6 @@ SPCanvas {
     outline-width: 5px;
     outline-color: alpha(@theme_fg_color, 0.1);
 }
-#ObjectsTreeView.view:hover {
-    border-color: alpha(@theme_fg_color, 0.1);
-    border-style: solid;
-    border-width: 1px 0px;
-}
 #Objects .search {
   padding: 2px 4px;
   min-height: 16px;
